@@ -15,8 +15,9 @@ emits virtual-filesystems
 emits local-filesystems
 emits remote-filesystems
 emits all-swaps
-emits all-filesystems
 emits filesystem
+emits mounting
+emits mounted
 
 # temporary, until we have progress indication
 # and output capture (next week :p)
